# Email-Client

./: .gitignore  CMakeLists.txt  EmailClient.cpp  Justfile  README.md  RetrieveEmail.cpp  SendEmail.cpp  config.json  recipients.txt  shell.nix  todo.md
aur/: PKGBUILD
src/: app.cpp  app.hpp  installation_script.sh  main.cpp
src/backend/: CMakeLists.txt  HtmlParser.cpp  HtmlParser.h  account.h  certificate.h  html_parser.cpp  html_parser.h  mail_storage.cpp  mail_storage.h  mail_types.h  mailbox.cpp  mailbox.h
src/backend_new/: certificate.h  mailbox.h  smtp_sender.cpp  smtp_sender.h
src/frontend/: CMakeLists.txt  TPasswordInputLine.cpp  TPasswordInputLine.hpp  account_helper.hpp  app_frontend.cpp  app_frontend.hpp  app_theme.cpp  app_theme.hpp  commands.hpp  email_draft_layout.cpp  email_draft_layout.hpp  email_types.hpp  email_window.cpp  email_window.hpp  folder_menu.cpp  folder_menu.hpp  inbox_window.cpp  inbox_window.hpp  log_in.cpp  log_in.hpp  login_dialog.cpp  login_dialog.hpp  new_account_dialog.cpp  new_account_dialog.hpp  select_input.cpp  select_input.hpp
src/logging/: CMakeLists.txt  logging.cpp  logging.hpp
src/old_frontend/: app_frontend.cpp  app_frontend.hpp  email_draft_layout.cpp  email_draft_layout.hpp  log_in.cpp  log_in.hpp  select_input.hpp
